--- a/difindifrep_v2.Rmd
+++ b/difindifrep_v2.Rmd
@@ -1,14 +1,17 @@
+---
+title: "Replication 2: Abadie (2005)"
+author: "Hannah Jones"
+date: "4/14/2021"
+output: pdf_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+
 library(tidyverse)
 library(haven)
 library(estimatr)
-
-read_data <- function(df)
-{
-  full_path <- paste("https://github.com/hannahjonesut/diff_in_diff/blob/main/", 
-                     df, sep = "")
-  df <- read_dta(full_path)
-  return(df)
-}
+library(ggplot2)
 
 nsw_dw_cpscontrol <- read_dta("nsw_cps_mixtape.dta") %>% 
   mutate(agesq = age^2,
@@ -21,9 +24,16 @@ nsw_dw_cpscontrol <- read_dta("nsw_cps_mixtape.dta") %>%
          re74cube = re74^3,
          re75sq = re75^2,
          re75cube = re75^3)
+```
 
+## Propensity Scores using Logit and OLS
 
-# estimating LOGIT 
+I brought in the data already combined using Stata.
+
+First, we estimate a Logit model using up to quadratic covariates, and a second Logit model using up to cubic covariates.  We then store the propensity scores (predictions of treatment) in new variables called quadpscore and cubepscore.
+
+```{r}
+
 quad_logit_nsw <- glm(treat ~ age + agesq + educ + educsq + 
                    marr + nodegree + black + hisp + re74 + 
                    re74sq + re75 + re75sq + u74 + u75, 
@@ -39,36 +49,57 @@ cube_logit_nsw <- glm(treat ~ age + agesq + agecube + educ + educsq + educcube +
 logit_nsw_dw_cpscontrol <- nsw_dw_cpscontrol %>% 
   mutate(quadpscore = quad_logit_nsw$fitted.values, cubepscore = cube_logit_nsw$fitted.values)
 
+
+```
+
+Next we take the mean pscore for the treated and untreated observations for each model.  Those values are reported below:
+
+```{r}
 # mean pscore 
+
 logit_sumstat<- logit_nsw_dw_cpscontrol %>% 
   group_by(treat)%>% 
-  summarize(quad_mean = mean(quadpscore), cube_mean = mean(cubepscore),
-            quad_max = max(quadpscore), cube_max = max(cubepscore),
-            quad_min = min(quadpscore), cube_min = min(cubepscore))
+  summarize(logit_quad_mean = mean(quadpscore), logit_cube_mean = mean(cubepscore),
+            logit_quad_max = max(quadpscore), logit_cube_max = max(cubepscore),
+            logit_quad_min = min(quadpscore), logit_cube_min = min(cubepscore))
 logit_sumstat
 
-# histogram
-logit_nsw_dw_cpscontrol %>% 
-  filter(treat == 0) %>% 
-  ggplot() +
-  geom_histogram(aes(x = quadpscore))
+```
+
+We then look at histograms of propensity scores for each model for the treated and untreated observations.
+
+```{r message = FALSE, warning = FALSE}
 
 logit_nsw_dw_cpscontrol %>% 
-  filter(treat == 1) %>% 
+  filter(treat == 0) %>%
   ggplot() +
-  geom_histogram(aes(x = quadpscore))
-
-logit_nsw_dw_cpscontrol %>% 
-  filter(treat == 0) %>% 
-  ggplot() +
-  geom_histogram(aes(x = cubepscore))
+  geom_histogram(aes(x = quadpscore))+
+  labs(title = "Quadratic Logit Model Histogram for Untreated")
 
 logit_nsw_dw_cpscontrol %>% 
   filter(treat == 1) %>% 
   ggplot() +
-  geom_histogram(aes(x = cubepscore))
+  geom_histogram(aes(x = quadpscore))+
+  labs(title = "Quadratic Logit Model Histogram for Treated")
+
+logit_nsw_dw_cpscontrol %>% 
+  filter(treat == 0) %>% 
+  ggplot() +
+  geom_histogram(aes(x = cubepscore))+
+  labs(title = "Cubic Logit Model Histogram for Untreated")
+
+logit_nsw_dw_cpscontrol %>% 
+  filter(treat == 1) %>% 
+  ggplot() +
+  geom_histogram(aes(x = cubepscore))+
+  labs(title = "Cubic Logit Model Histogram for Treated")
 
 
+```
+
+Next we go through this whole process again using OLS.  We estimate a model using up to quadratic covariates, then up to cubic covariates.  Then we will predict and observe the propensity scores for each model for untreated and treated observations.
+
+```{r message = FALSE, warning = FALSE}
 
 # estimating ols
 quad_ols_nsw <- lm(treat ~ age + agesq + educ + educsq + 
@@ -87,6 +118,7 @@ ols_nsw_dw_cpscontrol <- nsw_dw_cpscontrol %>%
 
 
 # mean pscore 
+
 ols_sumstat<- ols_nsw_dw_cpscontrol %>% 
   group_by(treat)%>% 
   summarize(ols_quad_mean = mean(quadpscore), ols_cube_mean = mean(cubepscore),
@@ -94,26 +126,39 @@ ols_sumstat<- ols_nsw_dw_cpscontrol %>%
             ols_quad_min = min(quadpscore), ols_cube_min = min(cubepscore))
 ols_sumstat
 
+
 # histogram
 ols_nsw_dw_cpscontrol %>% 
   filter(treat == 0) %>% 
   ggplot() +
-  geom_histogram(aes(x = quadpscore))
+  geom_histogram(aes(x = quadpscore))+
+  labs(title = "Quadratic Linear Probability Model Histogram for Untreated")
 
 ols_nsw_dw_cpscontrol %>% 
   filter(treat == 1) %>% 
   ggplot() +
-  geom_histogram(aes(x = quadpscore))
+  geom_histogram(aes(x = quadpscore))+
+  labs(title = "Quadratic Linear Probability Model Histogram for Treated")
 
 ols_nsw_dw_cpscontrol %>% 
   filter(treat == 0) %>% 
   ggplot() +
-  geom_histogram(aes(x = cubepscore))
+  geom_histogram(aes(x = cubepscore))+
+  labs(title = "Cubic Linear Probability Model Histogram for Untreated")
 
 ols_nsw_dw_cpscontrol %>% 
   filter(treat == 1) %>% 
   ggplot() +
-  geom_histogram(aes(x = cubepscore))
+  geom_histogram(aes(x = cubepscore))+
+  labs(title = "Cubic Linear Probability Model Histogram for Treated")
+
+```
+As you can observe, the average propensity scores for untreated observations is higher using OLS, and the average propensity score for treated observations is much lower using OLS.
+
+## Trim Data and Repeat Histograms
+Now we trim the data so that only propensity scores greater that 0.1, and less than 0.9 are included in the histograms.
+
+```{r}
 
 #drop pscores <0.1 and >0.9
 quad_cut_logit_data<- logit_nsw_dw_cpscontrol %>%
@@ -128,30 +173,7 @@ quad_cut_ols_data<- ols_nsw_dw_cpscontrol %>%
 cube_cut_ols_data<- ols_nsw_dw_cpscontrol %>%
   filter(cubepscore > 0.1 & cubepscore < 0.9)
 
-#repeat 1c
-
-quad_cut_logit_data %>% 
-  filter(treat == 0) %>% 
-  ggplot() +
-  geom_histogram(aes(x = quadpscore))
-
-quad_cut_logit_data%>% 
-  filter(treat == 1) %>% 
-  ggplot() +
-  geom_histogram(aes(x = quadpscore))
-
-cube_cut_logit_data %>% 
-  filter(treat == 0) %>% 
-  ggplot() +
-  geom_histogram(aes(x = cubepscore))
-
-cube_cut_logit_data %>% 
-  filter(treat == 1) %>% 
-  ggplot() +
-  geom_histogram(aes(x = cubepscore))
-
-#logit averages
-
+#average min max
 
 sumstat_quad_cut_logit_data<- quad_cut_logit_data %>% 
   group_by(treat)%>% 
@@ -167,35 +189,6 @@ sumstat_cube_cut_logit_data<- cube_cut_logit_data %>%
             logit_cube_min = min(cubepscore))
 sumstat_cube_cut_logit_data
 
-
-#ols
-
-quad_cut_ols_data %>% 
-  filter(treat == 0) %>% 
-  ggplot() +
-  geom_histogram(aes(x = quadpscore))+
-  labs(title = "Propensity Score for Untreated", caption = "using Logit regression with quadratic terms")
-
-quad_cut_ols_data %>% 
-  filter(treat == 1) %>% 
-  ggplot() +
-  geom_histogram(aes(x = quadpscore))+
-  labs(title = "Propensity Score for Treated", caption = "using Logit regression with quadratic terms")
-
-cube_cut_ols_data %>% 
-  filter(treat == 0) %>% 
-  ggplot() +
-  geom_histogram(aes(x = cubepscore))+
-  labs(title = "Propensity Score for Untreated", caption = "using linear regression with quadratic terms")
-
-cube_cut_ols_data %>% 
-  filter(treat == 1) %>% 
-  ggplot() +
-  geom_histogram(aes(x = cubepscore))+
-  labs(title = "Propensity Score for Treated", caption = "using linear regression with quadratic terms")
-
-#ols averages
-
 sumstat_quad_cut_ols_data<- quad_cut_ols_data %>% 
   group_by(treat)%>% 
   summarize(ols_quad_mean = mean(quadpscore), 
@@ -210,14 +203,74 @@ sumstat_cube_cut_ols_data<- cube_cut_ols_data %>%
             ols_cube_min = min(cubepscore))
 sumstat_cube_cut_ols_data
 
+#repeat 1c
 
-#number 2: Using trimmed Logit with quadratic covariates
+quad_cut_logit_data%>% 
+  filter(treat == 0) %>% 
+  ggplot() +
+  geom_histogram(aes(x = quadpscore))+
+  labs(title = "Trimmed Quadratic Logit Histogram for Untreated" )
+
+quad_cut_logit_data%>% 
+  filter(treat == 1) %>% 
+  ggplot() +
+  geom_histogram(aes(x = quadpscore))+
+  labs(title = "Trimmed Quadratic Logit Histogram for Treated" )
+
+cube_cut_logit_data %>% 
+  filter(treat == 0) %>% 
+  ggplot() +
+  geom_histogram(aes(x = cubepscore))+
+  labs(title = "Trimmed Cubic Logit Model Histogram for Untreated" )
+
+cube_cut_logit_data %>% 
+  filter(treat == 1) %>% 
+  ggplot() +
+  geom_histogram(aes(x = cubepscore))+
+  labs(title = "Trimmed Cubic Logit Model Histogram for Treated" )
+
+quad_cut_ols_data %>% 
+  filter(treat == 0) %>% 
+  ggplot() +
+  geom_histogram(aes(x = quadpscore))+
+  labs(title = "Propensity Score for Untreated", caption = "using linear probability regression with quadratic terms")
+
+quad_cut_ols_data %>% 
+  filter(treat == 1) %>% 
+  ggplot() +
+  geom_histogram(aes(x = quadpscore))+
+  labs(title = "Propensity Score for Treated", caption = "using linear probability regression with quadratic terms")
+
+cube_cut_ols_data %>% 
+  filter(treat == 0) %>% 
+  ggplot() +
+  geom_histogram(aes(x = cubepscore))+
+  labs(title = "Propensity Score for Untreated", caption = "using linear regression with cubic terms")
+
+cube_cut_ols_data %>% 
+  filter(treat == 1) %>% 
+  ggplot() +
+  geom_histogram(aes(x = cubepscore))+
+  labs(title = "Propensity Score for Treated", caption = "using linear regression with cubic terms")
+
+
+
+```
+
+Repeating 1C with the trimmed data yields average propensity scores that are higher for the untreated and lower for the treated, as would be expected by removing the highest and lowest propensity scores.  The propensity scores are now closer to the mean as desired, and no longer weighted down.
+
+
+## 2. Calculate Before and After First Difference for Each Unit
+
+Moving forward, I will only be using the model with cubic covariates for Logit and the model with quadratic covariates for OLS.  For both datasets I will use the data trimmed to include on observations with pscores greater that 0.1 and less than 0.9.
+
+```{r}
 
 #LOGIT
 
-cube_cut_logit_data  %>% 
-  filter(treat == 1) %>% 
-  summary(re78)
+#cube_cut_logit_data  %>% 
+ # filter(treat == 1) %>% 
+ # summary(re78)
 
 mean1 <- cube_cut_logit_data%>% 
   filter(treat == 1) %>% 
@@ -226,9 +279,9 @@ mean1 <- cube_cut_logit_data%>%
 
 cube_cut_logit_data$y1 <- mean1
 
-cube_cut_logit_data%>% 
-  filter(treat == 0) %>% 
-  summary(re78)
+#cube_cut_logit_data%>% 
+ # filter(treat == 0) %>% 
+  #summary(re78)
 
 mean0 <- cube_cut_logit_data%>% 
   filter(treat == 0) %>% 
@@ -239,14 +292,23 @@ cube_cut_logit_data$y0 <- mean0
 
 ate <- unique(cube_cut_logit_data$y1 - cube_cut_logit_data$y0)
 
+atedf <- data.frame(ate)
+
+atedf
+
 cube_cut_logit_data <- cube_cut_logit_data%>% 
   select(-y1, -y0)
+```
 
+Using the logit model without weights, the first difference is ~ $1724.
+
+
+```{r}
 #OLS
 
-quad_cut_ols_data %>% 
-  filter(treat == 1) %>% 
-  summary(re78)
+#quad_cut_ols_data %>% 
+ # filter(treat == 1) %>% 
+  #summary(re78)
 
 mean1 <- quad_cut_ols_data %>% 
   filter(treat == 1) %>% 
@@ -255,9 +317,9 @@ mean1 <- quad_cut_ols_data %>%
 
 quad_cut_ols_data$y1 <- mean1
 
-quad_cut_ols_data %>% 
-  filter(treat == 0) %>% 
-  summary(re78)
+#quad_cut_ols_data %>% 
+ # filter(treat == 0) %>% 
+  #summary(re78)
 
 mean0 <- quad_cut_ols_data%>% 
   filter(treat == 0) %>% 
@@ -268,10 +330,24 @@ quad_cut_ols_data$y0 <- mean0
 
 ate <- unique(quad_cut_ols_data$y1 - quad_cut_ols_data$y0)
 
+atedf <- data.frame(ate)
+
+atedf
+
 quad_cut_ols_data <- quad_cut_ols_data %>% 
   select(-y1, -y0)
 
 
+```
+
+Using the OLS model without weights, the first difference is ~ -$5014.
+
+## Construct a Weighted Difference in Difference
+
+Now I construct a weighted difference in difference using normalized and non-normalized wieghts based on the predicted propensity scores for the Logit model and OLS model.
+
+
+```{r}
 #number 3: Construct a Weighted Difference in Difference
   
 #LOGIT
@@ -297,14 +373,22 @@ cube_cut_logit_data  <- cube_cut_logit_data  %>%
          y0 = ((1-treat)*re78/(1-cubepscore))/(s0/N),
          norm = y1 - y0)
 
-cube_cut_logit_data  %>% 
+Non_normalized_ATT<- cube_cut_logit_data  %>% 
   pull(ht) %>% 
   mean()
 
-cube_cut_logit_data  %>% 
+Normalized_ATT<- cube_cut_logit_data  %>% 
   pull(norm) %>% 
   mean()
 
+df<- data.frame(Non_normalized_ATT, Normalized_ATT)
+df
+```
+
+Above are the average 
+
+
+```{r}
 #OLS
 N <- nrow(quad_cut_ols_data )
 #- Manual with non-normalized weights using all data
@@ -327,11 +411,17 @@ quad_cut_ols_data  <- quad_cut_ols_data  %>%
          y0 = ((1-treat)*re78/(1-quadpscore))/(s0/N),
          norm = y1 - y0)
 
-quad_cut_ols_data %>% 
+Non_normalized_ATT<-quad_cut_ols_data %>% 
   pull(ht) %>% 
   mean()
 
-quad_cut_ols_data  %>% 
+Normalized_ATT<-quad_cut_ols_data  %>% 
   pull(norm) %>% 
   mean()
 
+df<- data.frame(Non_normalized_ATT, Normalized_ATT)
+df
+
+
+
+```
